Bug 118899 Option to display original date in message headers p=ch.ey@gmx.net r=me sr=dmose